deployments/notifications/notifications-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications
  namespace: app
spec:
  selector:
    app: notifications-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
      - name: notifications-service
        image: ranenachiket07/app-notifications:v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
