deployments/notifications/notifications-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifications-service
  namespace: app
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host: kong.local
    http:
      paths:
      - path: /notifications
        pathType: Prefix
        backend:
          service:
            name: notifications
            port:
              number: 80
